Fix 8: NumPy 2.x _sample_params inhomogeneous array + auto-detect COCO path

--- a/notebooks/EALLIS_Training_Kaggle.ipynb
+++ b/notebooks/EALLIS_Training_Kaggle.ipynb
@@ -24,14 +24,7 @@
         {
             "cell_type": "code",
             "execution_count": null,
-            "metadata": {
-                "execution": {
-                    "iopub.status.busy": "",
-                    "iopub.execute_input": "",
-                    "iopub.status.idle": "",
-                    "shell.execute_reply": ""
-                }
-            },
+            "metadata": {},
             "outputs": [],
             "source": [
                 "import torch, sys, os\n",
@@ -47,12 +40,24 @@
                 "SAVE_DIR      = os.path.join(KAGGLE_OUTPUT, 'outputs')   # wheels + checkpoints saved here\n",
                 "os.makedirs(SAVE_DIR, exist_ok=True)\n",
                 "\n",
-                "# COCO dataset from Kaggle input\n",
-                "COCO_ROOT = os.path.join(KAGGLE_INPUT, 'coco-2017-dataset', 'coco2017')\n",
-                "print(f'\\nCOCO root: {COCO_ROOT}')\n",
-                "print(f'  exists: {os.path.exists(COCO_ROOT)}')\n",
-                "if os.path.exists(COCO_ROOT):\n",
-                "    print(f'  contents: {os.listdir(COCO_ROOT)}')"
+                "# Auto-detect COCO dataset path from Kaggle input\n",
+                "COCO_ROOT = None\n",
+                "for item in os.listdir(KAGGLE_INPUT):\n",
+                "    candidate = os.path.join(KAGGLE_INPUT, item)\n",
+                "    # Check for coco2017 subfolder or direct train2017\n",
+                "    if os.path.isdir(os.path.join(candidate, 'coco2017')):\n",
+                "        COCO_ROOT = os.path.join(candidate, 'coco2017')\n",
+                "        break\n",
+                "    elif os.path.isdir(os.path.join(candidate, 'train2017')):\n",
+                "        COCO_ROOT = candidate\n",
+                "        break\n",
+                "\n",
+                "if COCO_ROOT:\n",
+                "    print(f'\\n✅ COCO root: {COCO_ROOT}')\n",
+                "    print(f'  contents: {os.listdir(COCO_ROOT)}')\n",
+                "else:\n",
+                "    print('\\n❌ COCO dataset not found! Add it as Kaggle input.')\n",
+                "    print(f'  Available inputs: {os.listdir(KAGGLE_INPUT)}')"
             ]
         },
         {
@@ -324,6 +329,19 @@
                 "    print('[Fix 7] NoiseModel camera_params path fixed.')\n",
                 "else:\n",
                 "    print('[Fix 7] NoiseModel path already fixed.')\n",
+                "\n",
+                "# --- Fix 8: NumPy 2.x _sample_params inhomogeneous array ---\n",
+                "with open(noise_file, 'r') as f:\n",
+                "    content = f.read()\n",
+                "old_return = 'return np.array([K, color_bias, g_scale, G_scale, G_shape, R_scale, Q_step, saturation_level, ratio])'\n",
+                "new_return = 'return (K, color_bias, g_scale, G_scale, G_shape, R_scale, Q_step, saturation_level, ratio)'\n",
+                "if old_return in content:\n",
+                "    content = content.replace(old_return, new_return)\n",
+                "    with open(noise_file, 'w') as f:\n",
+                "        f.write(content)\n",
+                "    print('[Fix 8] NumPy 2.x _sample_params array fix applied.')\n",
+                "else:\n",
+                "    print('[Fix 8] _sample_params already fixed.')\n",
                 "\n",
                 "print('\\n✅ All fixes applied!')"
             ]
@@ -641,7 +659,7 @@
                 "## 11. Download Summary\n",
                 "\n",
                 "After training, go to **Kaggle → Output tab** to download:\n",
-                "- `best_model.pth` — best checkpoint by bbox mAP\n",
+                "- `best_*.pth` — best checkpoint by bbox mAP\n",
                 "- `mmcv_full-*.whl` — compiled mmcv wheel (reusable)\n",
                 "- Training logs\n",
                 "\n",
